06-faq-accordion-card/styles/main.css
/* ****** GOOGLE FONTS ****** */

@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");

/* ****** CSS RESET ****** */

html {
  /* 62.5% of 16px browser font size is 10px */
  font-size: 62.5%;
}

* {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
}

body {
  font-family: "Kumbh Sans", sans-serif;
  font-size: 1.6rem;
  font-weight: 400;
  background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
  background-repeat: no-repeat;
  /* display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh; */
}

/* ****** BODY ****** */

.parent-container {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 130vh;
}

.card-container {
  width: 350px;
  height: fit-content;
  padding: 2rem;
  border-radius: 1.4rem;
  background-color: hsl(0, 0%, 100%);
  background-image: url("../images/bg-pattern-mobile.svg");
  background-repeat: no-repeat;
  background-position: top;
}

.image-container {
  width: 80%;
  margin: -13.3rem auto auto auto;
}

h2 {
  font-weight: 700;
  font-size: 2.5rem;
  text-align: center;
  margin-bottom: 2rem;
  margin-top: 6rem;
}

.accordion-item {
  border-bottom: 1px solid hsl(240, 5%, 91%);
  padding: 1.2rem 0;
}

.question {
  font-family: "Kumbh Sans", sans-serif;
  font-weight: 400;
  font-size: 1.2rem;
  background: none;
}

button {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  padding: 1.5rem 0;
}

h3 {
  font-weight: normal;
  font-size: 1.5rem;
}

.active {
  color: hsl(245, 9%, 27%);
  font-weight: 600;
}

h3:hover {
  color: hsl(14, 99%, 72%);
}

.accordion-item > p {
  font-size: 1.2rem;
  line-height: 1.6;
}

/* hide FAQ answers by default */
.hidden {
  display: none;
}

.rotate-icon {
  transform: rotate(180deg);
}

/* FOOTER  */
.attribution {
  font-size: 1.1rem;
  text-align: center;
}
.attribution a {
  color: hsl(0, 0%, 100%);
}

